Armazenando dados no LocalStorage

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <form class="form" action="">
         <!--TextBox-->
         <input class="form-input" type="text" data-form-input>
+        <input type="datetime-local" data-form-date>
         <!--Botao-->
         <button class="form-button" data-form-button> Novo Item </button>
       </form>
@@ -38,6 +39,7 @@
     
   </section>
   <!--Scripts-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="js/main.js" type="module"></script>
 </body>
 </html>
